# httpserv

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: FindPoco.cmake
examples/xmlhttprequest/: README.md  groceries.json  index.html
lib/: CMakeLists.txt  httpserver.cpp  httpserver.h  requesthandler.cpp  requesthandler.h  requesthandlerfactory.cpp  requesthandlerfactory.h  serverapplication.cpp  serverapplication.h
